=head1 NAME

Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf

  NOTE: File format changed. Old profiles can't be read.

  Fixed accounting for time spent executing subs that were
    compiled in string evals.
  Fixed problems with names containing newlines.
  Improved formating of stats for subs called by a statement.
  Added support for .pmc files.

=head2 Changes in Devel::NYTProf 2.02 (svn r361) 24 Jul 2008

  Fixed colors to use the median (not average) deviation from the median value.
  Fixed sub name resolution to work in more, perhaps all, unusual cases.

  Improved accuracy of subroutine timing by deducting statement measurement overheads.
  Improved readability of subroutine caller lists.
  Replaced use of fpurge() with a more portable approach.

  Added exclusive subroutine time (time in sub excluding subs it called).
  Added recording of xsub filenames (i.e. DBI.c)
  Added use of clock_gettime(), if available, for 100ns resolution.
    Uses CLOCK_MONOTONIC or else CLOCK_REALTIME. Thanks to Steve Peters.

=head2 Changes in Devel::NYTProf 2.01

  Fixed and unified module version numbers.

=head2 Changes in Devel::NYTProf 2.00

  Major changes. Much extra functionality and performance.
  See http://blog.timbunce.org/2008/07/15/nytprof-v2-a-major-advance-in-perl-profilers/

=head2 Changes in and before 1.50

	1.50  ? ? ? 0:00:00 2008
		- Major revision to include Tim Bunce's call scope statistics features,
				code/doc refactoring, optimizations and bug fixes.
		- Fixes major issues with profiling code that forks.

	1.13	Wed Mar 26 9:35:00 2008
		- Fixed RedHat EL bug - %f isn't the C format for floating-point for RHEL
				Changed Reader.pm to warn-and-continue instead of dieing when a source 
				file cannot be found. (the file will be skipped). Feature by request.
				Makefile.PL changes by tim.bunce - fix warning on LICENSE key when 