@@ -10,9 +10,11 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
   Fixed accounting for time spent executing subs that were
     compiled in string evals.
-  Fixed problems with names containing newlines.
+  Fixed risk of file corruption by names containing newlines.
   Improved formating of stats for subs called by a statement.
   Added support for .pmc files.
+  Added detection of #line directives in source code
+    currently just warns that they are not handled.
 
 =head2 Changes in Devel::NYTProf 2.02 (svn r361) 24 Jul 2008
 
